static/styles/zulip.css
/* ... */
#navbar-buttons ul.nav .dropdown-toggle,
#navbar-buttons ul.nav li.active .dropdown-toggle {
    font-size: 18px;
    margin-top: 4px;
    color: #87cbc0;
    text-shadow: none;
    padding-left: 0px !important;
    background-color: inherit;
    box-shadow: inherit;
    -webkit-box-shadow: inherit;
    -moz-box-shadow: inherit;
}

#navbar-buttons ul.nav li.dropdown.open .dropdown-toggle {
    background: none;
    color: #fff;
    text-shadow: none;
}

#searchbox .input-append {
    position: relative;
    width: 100%;
}

#searchbox .input-append .icon-vector-search {
    padding: 0px;
    position: absolute;
    left: 11px;
    top: 8px;
    z-index: 5;
}

.navbar-search {
    margin-right: 5px;
    margin-left: 10px;
    width: auto;
    float: none;
}

#search_query {
    width:       100%;
    font-size:   1em;
    line-height: 20px;
    padding: 0px;
    color: #222;
    height: 27px;
    min-height: 27px;
    border-radius: 3px;
    box-shadow: none;
    margin-left: 5px;
    margin-top: 1px;
    margin-bottom: 2px;
    padding-left: 25px;
    padding-right: 20px;
    background: -moz-linear-gradient(top, rgba(14,70,67,0.2) 0%, rgba(14,83,68,0.2) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(14,70,67,0.2)), color-stop(100%,rgba(14,83,68,0.2))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, rgba(14,70,67,0.2) 0%,rgba(14,83,68,0.2) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, rgba(14,70,67,0.2) 0%,rgba(14,83,68,0.2) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, rgba(14,70,67,0.2) 0%,rgba(14,83,68,0.2) 100%); /* IE10+ */
    background: linear-gradient(to bottom, rgba(14,70,67,0.2) 0%,rgba(14,83,68,0.2) 100%); /* W3C */
    background: rgb(255,255,255); /* Old browsers */
    border: none;
    border-top: 1px solid #777;
    border-left: 1px solid #777;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.7);
    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.7);
    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.7);
    font-family: 'Humbug';
}


#search_query:focus {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.7), 0px 0px 8px rgba(255,255,255, 0.3);
    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.7), 0px 0px 8px rgba(255,255,255, 0.3);
    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 0px rgba(255, 255, 255, 0.7), 0px 0px 8px rgba(255,255,255, 0.3);
}

#searchbox .search_button, #searchbox .search_button[disabled]:hover {
    position: absolute;
    right: 0px;
    top: 0px;
    background: none;
    border-radius: 0px;
    border: none;
    height: 30px;
    text-align: center;
    padding: 4px;
    color: #ccc;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    text-shadow: none;
    z-index:5;
}

#searchbox .search_button:hover {
    color: #000;
}

#searchbox .search_button[disabled] {
    visibility: hidden;
}

.highlight {
    background-color: #FCEA81;
}

.highlight_text_inserted {
    background-color: #E6EDFF;
}

.highlight_text_deleted {
    background-color: #FFE6E6;
}

.highlight_text_replaced {
    background-color: #F5E6FF;
}

#search_arrows {
    margin-bottom: 5px;

    /* Bootstrap wants font-size: 0 to eliminate space between
       the buttons.  We need to inherit the font size, so we
       remove the button gap by adjusting "letter" spacing. */
    font-size: 90%;
    letter-spacing: -.3em;
}

#search_arrows input {
    /* Chrome and Firefox do this already via default browser stylesheet;
       but Opera needs this to avoid smushed letters in the search box. */
    letter-spacing: normal;
}


#floating_recipient_bar {
    position: fixed;
    /* .message_list max-width */
    text-decoration: none;
    top: 60px; /* should really be the same as the height of navbar-spacer + height of the tab bar*/
    visibility: hidden; /* so that we pass clicks through to underneath us */
    /* If zhome has opacity on it, it suddenly starts getting drawn on top
       of top_statusbar -- unless we specify a z-index.  */
    z-index: 2;
}

table.floating_recipient {
    table-layout: fixed;
    border-collapse: separate;
    margin-left: auto;
    width: 100%;
}

#bottom_whitespace {
  display: block;
  height: 300px;
}

#home-error {
    display: none;
}

.loading_indicator_spinner {
    /* If you change these, make sure to adjust the constants in
     * make_loading_indicator as well */
    height: 38px;
    width: 38px;
    float: left;
}

.loading_indicator_text {
    /* If you change these, make sure to adjust the constants in
     * make_loading_indicator as well */
    margin-left: 20px;
    font-size:   33px;
    font-weight: bold;
    line-height: 38px;
}

.message_inline_image {
    margin-bottom: 5px;
    margin-left: 5px;
    height: 100px;
}

.message_inline_image img {
    height: 100%;
}

.popover {
    width: auto;
}

.popover-title {
    overflow-x: hidden;
    text-overflow: ellipsis;
    text-align: center;

    font-size:   inherit;
    line-height: inherit;
}

.popover-title:empty {
    display: none;
}

.popover_info {
    text-align: center;
}

.popover hr {
    margin-top:    5px;
    margin-bottom: 5px;
}

.hotkeys_table {
    float: left;
    width: 245px;
    margin-right: 10px;
    font-size: 90%;
}

.hotkeys_table .hotkey {
    text-align: right;
    font-weight: bold;
}

#loading_more_messages_indicator {
    margin: 10px;
}

#loading_more_messages_indicator_box_container {
    position: absolute;
    left: 50%;
}
/* ... */

